--- a/.github/workflows/ci_docker.yml
+++ b/.github/workflows/ci_docker.yml
@@ -26,7 +26,7 @@ jobs:
         run: pytest
 
       - name: Run pylint
-        run: pylint test.py
+        run: pylint app.py
 
   docker-build:
     runs-on: ubuntu-latest
